fix(panel): support Super Dark Mode
close #947

--- a/src/content/components/SaladBowl/SaladBowl.shadow.scss
+++ b/src/content/components/SaladBowl/SaladBowl.shadow.scss
@@ -28,6 +28,12 @@ $bowl-width: 30px;
       }
     }
   }
+
+  &,
+  & > svg {
+    // #947 fix Super Dark Mode
+    background-color: transparent !important;
+  }
 }
 
 .saladbowl {
